[package]
name = "bootstrap-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
winit = "0.30.0"
